<resources>
    <string name="app_name">ﾐｽﾐ eｶﾀﾛｸﾞ</string>
    <string name="label_day_to_ship_0">当日出荷</string>
    <string name="label_day_to_ship_1ro98_1"/>
    <string name="label_day_to_ship_1ro98_2">日間</string>
    <string name="label_day_to_ship_1ro98_1_quote"/>
    <string name="label_day_to_ship_1ro98_2_quote">日間</string>
    <string name="label_day_to_ship_99">都度お見積り</string>
    <string name="label_shiptype_1">在庫品</string>
    <string name="label_shiptype_2">在庫手配中</string>
    <string name="label_shiptype_3">土祝含まず</string>
    <string name="label_shiptype_4">土曜含まず</string>
    <string name="label_shiptype_5">祝日含まず</string>
    <string name="label_hyphen">&#8211;</string>
    <string name="label_stoke_t">当日出荷（ストークT）</string>
    <string name="label_stoke_a">翌日出荷（ストークA）</string>
    <string name="label_stoke_a_rapid">翌日出荷（ストークA早割）</string>
    <string name="label_stoke_b">3日目出荷（ストークB）</string>
    <string name="label_stoke_c">5日目出荷（ストークC）</string>
    <string name="label_stoke_z">ストークZ</string>
    <string name="label_stoke_l">ストークL</string>
    <string name="label_express_deadline">后截止受理</string>
    <string name="text_quantity_hint"/>
    <string name="main_label_input_keyword_hint">キーワードまたは型番を入力してください</string>
    <string name="login_label_title">ログイン</string>
    <string name="login_label_login_id">ログインID</string>
    <string name="login_label_password">パスワード</string>
    <string name="login_label_hint_login_id">ログインID</string>
    <string name="login_label_hint_password">パスワード</string>
    <string name="login_label_password_forget">ログインID、パスワードを忘れた方はこちら　＞</string>
    <string name="login_label_check_input_omit">次回から入力を省略</string>
    <string name="login_label_mode_normal"/>
    <string name="login_label_mode_session">セッションが切れたため、再度ログインしてください。</string>
    <string name="login_label_mode_require">この機能を利用するためにはログインが必要です</string>
    <string name="login_button_label_login">ログイン</string>
    <string name="login_button_label_close">閉じる</string>
    <string name="top_label_welcome">ようこそミスミへ</string>
    <string name="top_label_login">ログイン</string>
    <string name="top_label_logout">ログアウト</string>
    <string name="top_label_status_check">受付状況</string>
    <string name="top_label_customer_code">（得意先コード：%s）</string>
    <string name="top_label_status_title">見積注文受付ステータス</string>
    <string name="top_label_quotation_status_title">お見積</string>
    <string name="top_label_order_status_title">ご注文</string>
    <string name="top_label_status_accept">受付中</string>
    <string name="top_label_status_accept_next_day">受付中（翌営業日扱）</string>
    <string name="top_label_status_maintenance">メンテナンス中</string>
    <string name="top_label_status_unset">&#8211;</string>
    <string name="top_label_status_day_of_week_1">日</string>
    <string name="top_label_status_day_of_week_2">月</string>
    <string name="top_label_status_day_of_week_3">火</string>
    <string name="top_label_status_day_of_week_4">水</string>
    <string name="top_label_status_day_of_week_5">木</string>
    <string name="top_label_status_day_of_week_6">金</string>
    <string name="top_label_status_day_of_week_7">土</string>
    <string name="top_label_information">現在お知らせはありません。</string>
    <string name="top_label_input_keyword_hint">キーワードまたは型番を入力してください</string>
    <string name="top_label_calendar_01">top_cal_month_1.png</string>
    <string name="top_label_calendar_02">top_cal_month_2.png</string>
    <string name="top_label_calendar_03">top_cal_month_3.png</string>
    <string name="top_label_calendar_04">top_cal_month_4.png</string>
    <string name="top_label_calendar_05">top_cal_month_5.png</string>
    <string name="top_label_calendar_06">top_cal_month_6.png</string>
    <string name="top_label_calendar_07">top_cal_month_7.png</string>
    <string name="top_label_calendar_08">top_cal_month_8.png</string>
    <string name="top_label_calendar_09">top_cal_month_9.png</string>
    <string name="top_label_calendar_10">top_cal_month_10.png</string>
    <string name="top_label_calendar_11">top_cal_month_11.png</string>
    <string name="top_label_calendar_12">top_cal_month_12.png</string>
    <string name="top_label_category_list">カテゴリ一覧</string>
    <string name="top_label_my_parts">My部品表</string>
    <string name="top_label_estimate_history">見積履歴</string>
    <string name="top_label_order_history">注文履歴</string>
    <string name="top_label_guide">ご利用ガイド</string>
    <string name="menu_label_debug">デバッグ</string>
    <string name="menu_label_top">TOP</string>
    <string name="menu_label_login">ログイン</string>
    <string name="menu_label_logout">ログアウト</string>
    <string name="menu_label_category_list">カテゴリ一覧</string>
    <string name="menu_label_cart">カート</string>
    <string name="menu_label_my_parts">My部品表</string>
    <string name="menu_label_estimate_history">見積履歴</string>
    <string name="menu_label_order_history">注文履歴</string>
    <string name="menu_label_working_hour">営業日・営業時間</string>
    <string name="menu_label_guide">ご利用ガイド</string>
    <string name="menu_label_agreements">ご利用規約</string>
    <string name="menu_label_personal_info">個人情報・お客様情報</string>
    <string name="menu_label_register">会員登録</string>
    <string name="menu_label_contact">お問い合わせ</string>
    <string name="menu_label_device_information">端末情報確認</string>
    <string name="message_timeout_error">圏外またはネットワークに接続できません。\nネットワークの状態を確認してください。</string>
    <string name="message_network_error">圏外またはネットワークに接続できません。\nネットワークの状態を確認してください。</string>
    <string name="message_session_error">一定時間が経過したか、他の端末からログインされたため再ログインが必要です。\nログインしますか？</string>
    <string name="message_session_scheme_error">セッションが無効です。</string>
    <string name="message_logout">ログアウトしますか？</string>
    <string name="message_logout_success">ログアウトしました。</string>
    <string name="message_update_require">新しいバージョンがあります。\nアップデートしてください。</string>
    <string name="message_update_exist">新しいバージョンがあります。\n今すぐアップデートしますか。</string>
    <string name="message_request_copy">端末情報をコピーしました</string>
    <string name="message_apllication_finish">アプリケーションを終了しますか？</string>
    <string name="message_write_file_error">予期せぬエラーが発生しました。\n空き容量をご確認ください。\n</string>
    <string name="message_progress_transmitting">通信中…</string>
    <string name="message_unknown_error">予期せぬエラーが発生しました。\n電話機を再起動して再度お試しください。\n改善しない場合は、ミスミサポートセンター（0120&#8211;343&#8211;256）にお問い合せください。</string>
    <string name="message_input_qty">数量を入力してください</string>
    <string name="dialog_button_yes">はい</string>
    <string name="dialog_button_kettei">決定</string>
    <string name="dialog_button_no">いいえ</string>
    <string name="dialog_button_retry">リトライ</string>
    <string name="dialog_button_cancel">キャンセル</string>
    <string name="dialog_button_close">閉じる</string>
    <string name="dialog_button_add">追加する</string>
    <string name="dialog_button_delete">削除する</string>
    <string name="dialog_button_go_cart">カートを見る</string>
    <string name="dialog_button_go_my_part">My部品表を開く</string>
    <string name="message_and_over">〜</string>
    <string name="money_format">%1$,3.0f</string>
    <string name="label_currency_jpy">円</string>
    <string name="label_currency_rmb">元</string>
    <string name="label_currency_usd">＄</string>
    <string name="label_currency_none"/>
    <string name="format_currency_jpy">%s円</string>
    <string name="format_currency_rmb">%s元</string>
    <string name="format_currency_usd">＄%s</string>
    <string name="format_currency_none">%s</string>
    <string name="label_currency_jpy_pre">￥</string>
    <string name="label_currency_rmb_pre">￥</string>
    <string name="label_currency_usd_pre">＄</string>
    <string name="format_currency_jpy_wtax">%s円(内税)</string>
    <string name="format_currency_rmb_wtax">%s元(内税)</string>
    <string name="format_currency_usd_wtax">＄%s(内税)</string>
    <string name="my_parts_title">My部品表</string>
    <string name="my_parts_folder_label">フォルダリスト</string>
    <string name="my_parts_add_card">カートへ追加する</string>
    <string name="my_parts_count_str">件</string>
    <string name="my_parts_item_count_1">商品</string>
    <string name="my_parts_item_count_2">件</string>
    <string name="my_parts_item_colon">：</string>
    <string name="my_parts_quantity_main">数　量：</string>
    <string name="my_parts_parts_number">型番:</string>
    <string name="my_parts_product_name">名称:</string>
    <string name="my_parts_unit_price">単価:</string>
    <string name="my_parts_quantity">個数:</string>
    <string name="my_parts_quantity_unit">個</string>
    <string name="my_parts_module_label">構成部品一覧を見る</string>
    <string name="my_parts_pack_quantity">（%s個入り）</string>
    <string name="my_parts_dialog_added_cart">商品をカートに追加しました。</string>
    <string name="my_parts_dialog_added_cart_title">カートへ追加</string>
    <string name="my_parts_dialog_added_my_parts">My部品表のメインフォルダに追加しました。</string>
    <string name="my_parts_dialog_moved_my_parts">My部品表（メインフォルダ）へ移動しました。</string>
    <string name="quote_hist_title">見積履歴</string>
    <string name="quote_hist_count_str1"/>
    <string name="quote_hist_count_str2">件の見積履歴があります</string>
    <string name="quote_hist_slip_no">見積書番号</string>
    <string name="quote_hist_date">見積日時</string>
    <string name="quote_hist_expire">見積有効期限</string>
    <string name="quote_hist_item_count">商品件数</string>
    <string name="quote_hist_count_unit">件</string>
    <string name="quote_hist_misumi_check_str">内、ミスミ確認中%s件</string>
    <string name="quote_hist_total_price">合計金額</string>
    <string name="quote_hist_total_price_unit">（外税）</string>
    <string name="quote_hist_total_price_tax">合計金額</string>
    <string name="quote_hist_total_price_tax_unit">（内税）</string>
    <string name="quote_hist_empty_list_item">アプリで表示できるお見積り履歴はございません。</string>
    <string name="quote_hist_detail_slip_no">見積書番号</string>
    <string name="quote_hist_detail_date">見積日時</string>
    <string name="quote_hist_detail_expire">見積有効期限</string>
    <string name="quote_hist_detail_user_name">ご担当者名</string>
    <string name="quote_hist_detail_item_count">商品件数</string>
    <string name="quote_hist_detail_count_unit">件</string>
    <string name="quote_hist_detail_misumi_check_str">内、ミスミ確認中%s件</string>
    <string name="quote_hist_detail_total_price">合計金額（外税）</string>
    <string name="quote_hist_detail_total_price_tax">合計金額（内税）</string>
    <string name="quote_hist_detail_total_price_checking">※上記金額にミスミ確認中の商品は含まれておりません。</string>
    <string name="quote_hist_detail_add_my">My部品表に追加</string>
    <string name="order_detail_deadline_info1"/>
    <string name="order_complete_title">ご注文が完了いたしました。\nご登録メールアドレスに、注文確認メールをお送りいたします。</string>
    <string name="order_complete_confirm_info_title">ミスミにて確認中の商品について</string>
    <string name="order_complete_confirm_info_memo2">早急にミスミにて内容確認後、メールによる連絡及び、パソコン上でメッセージを表示致します。\nメッセージが表示されている場合は、内容をご確認の上、対応をよろしくお願い致します。</string>
    <string name="order_complete_cancel_info_title">注文変更・キャンセル・返品について</string>
    <string name="order_complete_cancel_info_memo">商品変更、キャンセル、返品については[こちら]をご確認ください。</string>
    <string name="order_complete_info_title">注文情報</string>
    <string name="order_complete_info_image_message">ミスミからのメッセージ表示イメージ（PCサイト）</string>
    <string name="confirm_back_from_cart">カートへ戻る</string>
    <string name="dummy_string">dummy</string>
    <string name="dummy_num">99</string>
    <string name="debug_label_api_addr">API</string>
    <string name="debug_label_nas_addr">NAS</string>
    <string name="debug_label_session_id">SID</string>
    <string name="debug_label_category_clear">保持カテゴリを削除</string>
    <string name="debug_label_login_id">保持ログインIDを設定</string>
    <string name="debug_label_radio_group">現地コード変更</string>
    <string name="debug_label_radio_japanese">日本モード</string>
    <string name="debug_label_radio_chinese">中国モード</string>
    <string name="debug_label_currency_group">通貨コード変更</string>
    <string name="debug_label_radio_yen">円</string>
    <string name="debug_label_radio_gen">元</string>
    <string name="debug_label_radio_doller">ドル</string>
</resources>