<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:showDividers="middle"
    android:divider="@drawable/top_divider">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="@drawable/top_divider">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="18"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_api_addr"
                    android:layout_weight="2"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextApiAddr"
                    android:layout_weight="14" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUpdateApi"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="18"
                android:padding="@dimen/dp_10" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_nas_addr"
                    android:layout_weight="2"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextNasAddr"
                    android:layout_weight="14" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUpdateNas"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:weightSum="18"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_session_id"
                    android:layout_weight="2"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextSid"
                    android:layout_weight="14" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUpdateSid"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_category_clear"
                    android:id="@+id/buttonClearCategory"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10"
                android:visibility="gone">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_login_id"
                    android:id="@+id/buttonSetLoginId"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_login_id"
                    android:id="@+id/textView8"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textColor="#050000" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerUsers"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_radio_group"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textColor="#000000" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:id="@+id/RadioSubsidiaryGroup"
                    android:weightSum="2">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_label_radio_japanese"
                        android:id="@+id/radioJapan"
                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_label_radio_chinese"
                        android:id="@+id/radioChinese"
                        android:layout_weight="1" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_label_currency_group"
                    android:id="@+id/textView9"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/RadioCurrencyGroup"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_label_radio_yen"
                        android:id="@+id/radioYen"
                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_label_radio_gen"
                        android:id="@+id/radioGen"
                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_label_radio_doller"
                        android:id="@+id/radioDoller"
                        android:layout_weight="1" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>