<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/color_background_EE"
	android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

	    <LinearLayout
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:paddingTop="@dimen/padding_10dp"
		    android:paddingBottom="@dimen/padding_10dp"
            android:orientation="vertical">

			<!-- 進行ゲージ -->
			<include layout="@layout/include_progress_header"
				android:id="@+id/progressHeader"/>


		    <LinearLayout
		        android:orientation="vertical"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"

				android:paddingLeft="@dimen/padding_15dp"
				android:paddingRight="@dimen/padding_15dp"
				>

				<!--DEL NT-LWL 16/11/15 AliPay Payment FR-->
				<!--<TextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:paddingTop="@dimen/dp_15"

				    android:text="@string/order_complete_title"
				    android:textSize="@dimen/font_title_15dp"
				    android:textColor="@color/color_text_black_00"
				    android:textStyle="bold"
					/>-->
				<!--DEL NT-LWL 16/11/15 AliPay Payment TO-->

				<!-- 素通し提示 -->

				<LinearLayout
			        android:id="@+id/misumiCheckLayout"
			        android:orientation="vertical"
				    android:paddingTop="@dimen/padding_10dp"
				    android:paddingBottom="@dimen/padding_5dp"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content">

					<include layout="@layout/include_complete_attention"
						android:id="@+id/misumiCheck"/>


	                <TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
					    android:paddingTop="@dimen/dp_20"
	                    android:paddingBottom="@dimen/dp_5"

						android:text="@string/order_complete_confirm_info_title"
						android:textColor="@color/color_text_default"
					    android:textStyle="bold"
						android:textSize="@dimen/dp_15" />

	                <TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"

						android:text="@string/order_complete_confirm_info_memo2"
						android:textColor="@color/color_text_default"
						android:background="@drawable/text_frame_red_2dp"
						android:textSize="@dimen/dp_12" />


					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					    android:paddingTop="@dimen/padding_15dp"
						android:text="@string/order_complete_info_image_message"
						android:textColor="@color/color_text_red_DD"
					    android:textStyle="bold"
						android:textSize="@dimen/dp_12"
						android:visibility="gone" />

					<ImageView
						android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:adjustViewBounds="true"
		                android:layout_gravity="center"
				        android:scaleType="fitCenter"

						android:src="@drawable/message_image"
						android:visibility="gone" />

				</LinearLayout>


				<TextView
					android:id="@+id/textDeadlineInfo"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="@dimen/padding_15dp"
					android:paddingRight="@dimen/padding_15dp"
					android:paddingTop="@dimen/padding_15dp"
					android:paddingBottom="@dimen/padding_15dp"
					android:text="@string/order_detail_deadline_info1"
					android:textSize="@dimen/font_error_10dp"
					android:textColor="@color/color_text_red_DD"
					android:textStyle="bold"
					android:background="@drawable/view_error_frame_1dp"
					android:layout_marginBottom="@dimen/margin_15dp"
					android:layout_marginTop="@dimen/margin_15dp"/>


				<!--ADD NT-LWL 16/11/15 AliPay Payment FR-->
				<Button
					android:id="@+id/buttonPay"
					android:layout_width="match_parent"
					android:layout_height="@dimen/button_height_45dp"
					android:paddingRight="@dimen/padding_15dp"
					android:visibility="gone"
					android:text="@string/order_list_go_to_pay"
					android:textSize="@dimen/font_button_type3_15dp"
					android:textColor="@color/button_orange_text_selector"
					android:textStyle="bold"
					android:drawableRight="@drawable/btn_icon_lbtn_w"
					android:background="@drawable/btn_bg_orange_selector"
					/>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="@dimen/dp_15"

					android:text="@string/order_complete_title"
					android:textSize="@dimen/font_title_15dp"
					android:textColor="@color/color_text_black_00"
					android:textStyle="bold"
					/>
				<!--ADD NT-LWL 16/11/15 AliPay Payment TO-->


				<TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
				    android:paddingTop="@dimen/padding_15dp"

	                android:text="@string/order_complete_info_title"
					android:textColor="@color/color_text_default"
				    android:textStyle="bold"
					android:textSize="@dimen/dp_15" />

				<View
			        android:layout_width="match_parent"
			        android:layout_height="1dp"
					android:layout_marginTop="@dimen/dp_5"

					android:background="@color/color_list_divider_9C"
					/>

				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/infoSlipNo" />

				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/itemCount" />

				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/totalPrice" />

				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/totalPriceIncludingTax" />

				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/infoDatetime" />
				<!--ADD NT-LWL 16/11/15 AliPay Payment FR-->
				<include layout="@layout/include_item_text_14_19v"
					android:id="@+id/paymentType" />
				<!--ADD NT-LWL 16/11/15 AliPay Payment TO-->

		        <Button
		            android:id="@+id/buttonClose"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/button_height_45dp"
					android:paddingRight="@dimen/dp_27"
					android:paddingLeft="@dimen/padding_15dp"
					android:layout_marginTop="@dimen/dp_25"

					android:text="@string/confirm_back_from_cart"
		            android:textSize="@dimen/font_button_type3_15dp"
		            android:textColor="@color/button_white_text_selector"
					android:textStyle="bold"
					android:drawableLeft="@drawable/btn_icon_rbtn_g"
			        android:background="@drawable/btn_bg_white_selector"
					/>



				<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
				    android:paddingTop="@dimen/dp_20"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/order_complete_cancel_info_title"

                    android:textColor="@color/color_text_default"
					android:textStyle="bold"
					android:textSize="@dimen/dp_12" />

				<TextView
                    android:id="@+id/textCancelPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/order_complete_cancel_info_memo"
                    android:textColor="@color/color_text_default"
                    android:textColorLink="@color/text_color_link_blue2"
                    android:textColorHighlight="#FC4"
                    android:background="@drawable/text_frame_black_1dp"
					android:textSize="@dimen/dp_10" />

			</LinearLayout>

		</LinearLayout>

    </ScrollView>

</LinearLayout>

