<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/color_fragment_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingLeft="@dimen/dp_15"
		android:paddingRight="@dimen/dp_15"
		android:paddingBottom="@dimen/dp_10"
		android:paddingTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/my_parts_title"
        android:textSize="@dimen/dp_14"
	    android:textColor="@color/color_myparts_font_black"
		android:textStyle="bold"
	    android:background="@color/color_myparts_count_title"
		/>

	<LinearLayout
        android:id="@+id/layoutFolder"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
	    android:background="@color/color_myparts_count_background"
		android:paddingLeft="@dimen/dp_15"
		android:paddingRight="@dimen/dp_15"
		>

		<TextView
            android:id="@+id/textFolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_string"
            android:textSize="@dimen/dp_12"
            android:textColor="@color/color_myparts_font_black"
            android:maxLines="1"
            android:ellipsize="end"
			android:scrollHorizontally="true"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
            android:id="@+id/layoutCount">

			<TextView
                android:id="@+id/textFolderNameSep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_parts_item_colon"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/color_myparts_font_black"
                android:maxLines="1"
				android:layout_gravity="center_vertical"
				android:paddingTop="@dimen/dp_10"
				android:paddingBottom="@dimen/dp_10"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/textFolderNameSepLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_parts_item_count_1"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/color_myparts_font_black"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

			<TextView
                android:id="@+id/textListCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_num"
                android:textSize="@dimen/dp_15"
                android:textStyle="bold"
                android:textColor="@color/color_myparts_count_font_red"
                android:maxLines="1"
				android:layout_gravity="center_vertical"
				android:singleLine="false"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textFolderNameSep"
                android:layout_toEndOf="@+id/textFolderNameSep" />

			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/color_myparts_font_black"
                android:maxLines="1"
				android:layout_gravity="center_vertical"
				android:paddingTop="@dimen/dp_10"
				android:paddingBottom="@dimen/dp_10"
				android:singleLine="false"
				android:id="@+id/textView"
                android:text="@string/my_parts_item_count_2"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textListCount"
                android:layout_toEndOf="@+id/textListCount" />
		</LinearLayout>


    </LinearLayout>


	<ListView
		android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"

		android:clipToPadding="false"

		android:divider="@null"
        android:dividerHeight="0dp"
		/>

</LinearLayout>

